# diarrhizer

./: .env.example  .gitignore  .kilocodeignore  AGENTS.md  README.md  SEMANTIC_TAGS.md  architecture.md  pyproject.toml  sitecustomize.py
.kilocode/rules/: 00-project.md  01-architecture.md  02-semantic-tags.md  03-docs-and-hygiene.md
.kilocode/workflows/: 00-bootstrap.md  01-make-change.md  02-semantic-tagging.md
docs/: architecture.md  examples.md  output-schema.md  troubleshooting.md
requirements/: base.txt  constraints-stable.txt  cpu.txt  cuda-cu121.txt  cuda-cu124.txt  lock-win-cpu.txt  lock-win-cuda-cu128.txt
src/diarrhizer/: __init__.py  __main__.py  cli.py
src/diarrhizer/adapters/: __init__.py  ffmpeg.py  whisperx.py
src/diarrhizer/diagnostics/: __init__.py  doctor.py
src/diarrhizer/export/: __init__.py  json_export.py  markdown_export.py  speakers.py
src/diarrhizer/pipeline/: __init__.py  runner.py
src/diarrhizer/pipeline/stages/: __init__.py  convert.py  diarize.py  export.py  merge.py  transcribe.py
