[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarrhizer"
version = "0.1.0"
description = "Local Windows tool for processing call recordings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Diarrhizer Team"}
]
dependencies = [
    # Core dependencies - to be added later
    # "torch",
    # "torchaudio",
    # "whisperx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
diarrhizer = "diarrhizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
diarrhizer = "src/diarrhizer"
