[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarrhizer"
version = "0.1.0"
description = "Local Windows tool for processing call recordings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Diarrhizer Team"}
]
dependencies = [
    "torch>=2.4.0,<2.5.0",
    "torchaudio>=2.4.0,<2.5.0",
    "whisperx>=3.0",
]

[project.optional-dependencies]
cuda = [
    # Use with: pip install -e .[cuda]
    # Then install CUDA wheels separately (see requirements/cuda-cu124.txt)
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
diarrhizer = "diarrhizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
diarrhizer = "src/diarrhizer"
